--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/custom.css" />
   <script src="bower_components/angular/angular.min.js"></script>
-  <script src="js/hangman.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/hangman.js"></script>
 </head>
 
-<body class="full-background">
+<body class="full-background" ng-app="hangmanApp">
 <div class='container' id="container" ng-controller="HangmanController as hangmanController">
   <div id='poor-soul' class='row'>
     <pre class='col-md-6 col-md-offset-3'>
@@ -26,12 +26,12 @@ _________
 
     </pre>
     <div class='col-sm-12 col-md-6 col-md-offset-3 text-center'>
-      ? tries remaining
+      {{hangmanController.triesRemaining}} tries remaining
     </div>
   </div>
   <div class='row'>
     <div class='col-sm-12 text-center'>
-      <span class="label label-default">SOLVING:</span><br />
+      <span class="label label-default">SOLVING: {{hangmanController.completedWord}}</span><br />
     </div>
     <div class='col-sm-12 text-center'>
       <span class='wide'></span>
@@ -40,7 +40,7 @@ _________
 
   <div class='row'>
     <div class='col-sm-12 text-center'>
-      <span class="label label-default">GUESSES: </span> <br />
+      <span class="label label-default">GUESSES:</span><span class='label label-default' ng-repeat="guess in hangmanController.guesses">{{ guess}} </span><br />
     </div>
     <div class='col-sm-12 text-center' id='guesses'>
     </div>
@@ -51,12 +51,12 @@ _________
       <span class="label label-default">INPUT:</span>
     </div>
     <div class="col-sm-12 text-center">
-      <input type='text' size='1' id='guess' />
+      <input type='text' size='1' id='guess' autofocus ng-model="hangmanController.input" ng-change="hangmanController.guessLetter(hangmanController.input)"/>
     </div>
   </div>
   <div class='row' id='statuses'>
     <div class='col-sm-1 table small-font'>Win status:
-      <span class='glyphicon'></span>
+      <span class='glyphicon' ng-class="{'glyphicon-ok': hangmanController.gameWon, 'glyphicon-remove': hangmanController.gameWon===false}"></span>
     </div>
   </div>
 </div>
